--- a/PerformAnalysis.ipynb
+++ b/PerformAnalysis.ipynb
@@ -16,8 +16,8 @@
    "outputs": [],
    "source": [
     "# put your GIS credentials here:\n",
-    "username = \"ahalani28\"\n",
-    "password = \"**inthefridge28\"\n",
+    "username = \"\"\n",
+    "password = \"\"\n",
     "gis = GIS(\"http://arcgis.com\", username, password)"
    ]
   },
